# os_gpu-v

./: .gitignore  CMakeLists.txt  README.md
client/: libcudart_proxy.cpp  probe.cpp
docs/: basics_c_deep_dive.md  basics_compilation_toolchain.md  basics_computer_architecture.md  basics_cpp_for_project.md  basics_cuda_api_comparison.md  basics_gpu_cuda.md  basics_linux_dev.md  basics_memory_deep_dive.md  basics_network_rpc.md  basics_os_dynamic_linking.md  basics_process_thread.md  design.md  evaluation.md  final_acceptance_results.md  final_implementation_plan.md  final_report.md  project_report.md  stage1_wsl_grpc_functional.md  stage2_wsl_resource_concurrency.md  stage3_posix_shm_dataplane.md  stage4_posix_shm_performance.md
proto/: vgpu.proto
server/: main.cpp  ring_worker.h  session_manager.h
shared/: vgpu_shm_ring.h
tools/: check_cuda_device.c  check_cuda_getproc.c  check_cuda_init_min.c  check_runtime_shim.cpp  check_runtime_shim_c.c  cudart_driver_shim.cpp  cudart_driver_shim_c.c  d2h_async_smoke.cu  driver_api_benchmark.cpp  event_reclaim_smoke.cu  fire_forget_stress.cu  host_alloc_perf_loop.cu  host_alloc_smoke.cu  host_register_smoke.cu  latency_breakdown_benchmark.cu  matmul_baseline.cu  matrix_mul_benchmark.cu  memcpy_baseline.cu  memory_limit_smoke.cu  perf_loop_benchmark.cu  pipeline_benchmark.cu  run_acceptance_validation.py  run_cross_session_sync_test.py  run_cuda_baselines.sh  runtime_query_smoke.cu  session_timeout_smoke.cu  stability_negative_smoke.cu  stream_async_smoke.cu  vector_add_smoke.cu
tools/concurrency/: concurrent_worker.cu  cross_session_sync_test.cu
tools/scripts/: run_acceptance_validation.py  run_cross_session_sync_test.py
tools/smoke/: event_timing_smoke.cu
tools/stress/: stability_negative_smoke.cu
